--- a/0  Jensen's Python Documentations.ipynb
+++ b/0  Jensen's Python Documentations.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,133 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NumPy"
+    "# Types"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Numbers: `int`, `float`, `complex`\n",
+    "\n",
+    "\n",
+    "```python\n",
+    "abs(x)\n",
+    "int(x)\n",
+    "float(x)\n",
+    "\n",
+    "complex(re, im) # im defaults to zero\n",
+    "x.conjugate()\n",
+    "\n",
+    "divmod(x,y) # the pair x//y and x%y\n",
+    "\n",
+    "```\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `int`\n",
+    "\n",
+    "\n",
+    "```python\n",
+    "int.bit_length() # Returns how many bits the integer uses\n",
+    "\n",
+    "int.to_bytes(length, byteorder, *, signed=False)\n",
+    "int.from_bytes(bytes, byteorder, *, signed=False)\n",
+    "```\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `float`\n",
+    "\n",
+    "\n",
+    "```python\n",
+    "float.as_integer_ratio()\n",
+    "float.is_integer()\n",
+    "\n",
+    "float.hex()\n",
+    "float.fromhex('0x3.a7p10')\n",
+    "\n",
+    "```\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `str`\n",
+    "\n",
+    "\n",
+    "```python\n",
+    "len(str)\n",
+    "str[i]\n",
+    "str[start:end+1]\n",
+    "\n",
+    "\"string1\" + \"string2\" # Concatenation\n",
+    "\n",
+    "str.format(*args, **kwargs)\n",
+    "\"The sum of 1 + 2 is {0}\".format(1+2)\n",
+    "\"4/3 in 2 sf is {:.2}\".format(4/3)\n",
+    "\"4/3 in 2 dp is {:.2f}\".format(4/3)\n",
+    "\"100/3 in scientific notation 20 dp is {:.20e}\".format(100/3)\n",
+    "\n",
+    "str.find(sub[, start[, end]])\n",
+    "'Hello, World!'.find('ll') == 2\n",
+    "'ll' in 'Hello, World!' == True\n",
+    "    \n",
+    "```\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert 'll' in 'Hello, World!'\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# `cmath`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Important ones:\n",
+    "\n",
+    "```python\n",
+    "z == z.real + z.imag*1j\n",
+    "\n",
+    "cmath.phase(z) # means argument\n",
+    "cmath.polar(z)\n",
+    "cmath.rect(r, phi)\n",
+    "\n",
+    "cmath.exp(x)\n",
+    "cmath.sqrt(x)\n",
+    "```\n",
+    "\n",
+    "Trig functions like `sin, asin, sinh` are in cmath too."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# `numpy`"
    ]
   },
   {
