--- a/Exercises/09 Exercises.ipynb
+++ b/Exercises/09 Exercises.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -31,12 +31,19 @@
     "def f(n): \n",
     "    \"Compute the nth Fibonacci number using recursion\"\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    if n < 0:\n",
+    "        raise ValueError(\"The Fibonacci is not valid for n < 0\")\n",
+    "    elif n == 0:\n",
+    "        return 0\n",
+    "    elif n == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return f(n-2) + f(n-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -94,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -107,20 +114,63 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.0000001192092896 9.536743306171047e-07 23\n",
+      "4.534070134162903 -7.047073751209609e-07 23\n"
+     ]
+    }
+   ],
    "source": [
     "def my_f(x):\n",
     "    \"Evaluate polynomial function\"\n",
     "    return x**3 - 6*x**2 + 4*x + 12\n",
     "\n",
-    "def compute_root(f, x0, x1, tol, max_it):\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "def testf(x):\n",
+    "    return x**2 - 16\n",
+    "\n",
+    "#def compute_root(f, x0, x1, tol, max_it):\n",
+    "#    # YOUR CODE HERE\n",
+    "#    raise NotImplementedError()\n",
+    "\n",
+    "def compute_root(f, x0, x1, tol, max_it, it_count=0): # it_count initialized in the argument part of the def\n",
+    "    \"Compute roots of a function using bisection, recusive function\"\n",
+    "    # increment it_count\n",
+    "    it_count += 1\n",
+    "    \n",
+    "    # bisection and reassigning boundary values\n",
+    "    x_mid = (x0 + x1)/2\n",
+    "    if f(x_mid)*f(x0) < 0:\n",
+    "        x1 = x_mid\n",
+    "    else:\n",
+    "        x0 = x_mid\n",
+    "    \n",
+    "    # Break if error is under tolerance\n",
+    "    error = abs(f(x_mid))\n",
+    "    if error < tol:\n",
+    "        return x_mid, f(x_mid), it_count\n",
+    "    \n",
+    "    # Break \n",
+    "    if it_count >= max_it:\n",
+    "        raise RuntimeError(\"Maximum Iterations Reached - will show results with \", it_count, \" iterations.\")\n",
+    "        return x_mid, f(x_mid), it_count\n",
+    "    \n",
+    "    # Call compute_root recursively\n",
+    "    return compute_root(f, x0, x1, tol, max_it, it_count)\n",
+    "\n",
+    "# Testing my code with the testf (root is 4 and -4) and my_f\n",
+    "x, f, num_it = compute_root(testf, x0=3, x1=6, tol=1.0e-6, max_it=100)\n",
+    "print(x, f, num_it)\n",
+    "x, f, num_it = compute_root(my_f, x0=3, x1=6, tol=1.0e-6, max_it=100)\n",
+    "print(x, f, num_it)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -162,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
