--- a/09 Error handling and testing.ipynb
+++ b/09 Error handling and testing.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,9 +310,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How old are you? -2\n",
+      "Invalid age entered. Please try again\n",
+      "How old are you? 1.5\n",
+      "Invalid age entered. Please try again\n",
+      "How old are you? Jensen\n",
+      "Invalid age entered. Please try again\n",
+      "How old are you? 18\n",
+      "18\n"
+     ]
+    }
+   ],
    "source": [
     "def get_user_age():\n",
     "    \"Function that asks user for their age. If input is invalid, user is prompted to try again\"\n",
@@ -333,10 +348,10 @@
     "        # Prompt user again to input age\n",
     "        return get_user_age()\n",
     "\n",
-    "    \n",
+    "\"CHANGED\"    \n",
     "# Uncomment the below lines to test\n",
-    "# age = get_user_age()\n",
-    "# print(age)"
+    "age = get_user_age()\n",
+    "print(age)"
    ]
   },
   {
@@ -353,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
