--- a/0  Jensen's Python Documentations.ipynb
+++ b/0  Jensen's Python Documentations.ipynb
@@ -118,6 +118,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `list`\n",
+    "\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "x = [1,2,3,4,3,2,43,4,3,2,1]\n",
+    "\n",
+    "x.append(5)\n",
+    "x.sort() # means x = sorted(x)\n",
+    "y = sorted(x)\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -175,6 +203,16 @@
     "np.random.rand()\n",
     "\n",
     "np.random.norm()\n",
+    "```\n",
+    "\n",
+    "### Methods on lists/tuples\n",
+    "\n",
+    "```python\n",
+    "np.sort(data, kind='quicksort')\n",
+    "np.min(data)\n",
+    "np.max(data)\n",
+    "\n",
+    "\n",
     "```"
    ]
   },
