--- a/0 Jensen's Condensed Notes.ipynb
+++ b/0 Jensen's Condensed Notes.ipynb
@@ -2233,7 +2233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2252,7 +2252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2271,6 +2271,18 @@
     "    f(-1)\n",
     "with pytest.raises(ValueError):\n",
     "    f(-2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 10 Algorithms\n",
+    "\n",
+    "Objectives:\n",
+    "- Develop appreciation of what an algorithm is\n",
+    "- Learn to create an algorithm to solve a problem\n",
+    "- Use *pseudocode* to describe algorithms"
    ]
   }
  ],
