--- a/0  Jensen's Python Documentations.ipynb
+++ b/0  Jensen's Python Documentations.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,6 +108,7 @@
     "\"4/3 in 2 sf is {:.2}\".format(4/3)\n",
     "\"4/3 in 2 dp is {:.2f}\".format(4/3)\n",
     "\"100/3 in scientific notation 20 dp is {:.20e}\".format(100/3)\n",
+    "\"The number in 16 characters in 4dp scientific notation is {:<16.4e}\".format(234567876543) \n",
     "\n",
     "str.find(sub[, start[, end]])\n",
     "'Hello, World!'.find('ll') == 2\n",
@@ -139,6 +140,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lambda\n",
+    "```python\n",
+    "x = lambda a : a + 10\n",
+    "x(2) == 12\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -146,12 +158,33 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "assert 'll' in 'Hello, World!'\n"
+    "### `pprint`\n",
+    "\n",
+    "```python\n",
+    "import pprint\n",
+    "\n",
+    "data = np.random.rand(3,4,5)\n",
+    "pprint.pprint(data) # not that it makes it any better than the original though haha idk\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# `sys`\n",
+    "\n",
+    "```python\n",
+    "import sys\n",
+    "sys.setrecursionlimit(25000)\n",
+    "# By default python raises an exception if the number of recursions is too high\n",
+    "# for a recursive function, so we can increase the limit with this statement\n",
+    "\n",
+    "```"
    ]
   },
   {
@@ -212,6 +245,7 @@
     "np.min(data)\n",
     "np.max(data)\n",
     "\n",
+    "x.flags.writeable = False # Makes data read-only; idk whether it is numpy only\n",
     "\n",
     "```"
    ]
@@ -230,6 +264,14 @@
    "source": [
     "```python\n",
     "plt.plot(*args, scalex=True, scaley=True, data=None, **kwargs)[source]\n",
+    "\n",
+    "plt.semilogx(N, times, marker='o', label='binary search')\n",
+    "plt.semilogy??\n",
+    "plt.loglog(N, 1e-6*N**2, '--', label=r'$O(n^2$)')\n",
+    "           \n",
+    "\n",
+    "plt.ticklabel_format(style='sci', axis='y', scilimits=(0,0))\n",
+    "\n",
     "```"
    ]
   }
