--- a/Exercises/12 Exercises.ipynb
+++ b/Exercises/12 Exercises.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -75,7 +75,18 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "1\n",
+      "2.449489742783178\n",
+      "[1, 1, 2]\n"
+     ]
+    }
+   ],
    "source": [
     "import math  # Use this to get the sqrt\n",
     "\n",
@@ -87,12 +98,46 @@
     "        self.x = x\n",
     "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    \n",
+    "    # Return length of vector\n",
+    "    def size(self):\n",
+    "        return len(self.x)\n",
+    "    \n",
+    "    # This allows access by index, e.g. y[2]\n",
+    "    def __getitem__(self, index):\n",
+    "        return self.x[index]\n",
+    "    \n",
+    "    # Calculate the norm\n",
+    "    def norm(self):\n",
+    "        n = 0\n",
+    "        for i in range(self.size()):\n",
+    "            n += self[i]**2\n",
+    "        return n**0.5\n",
+    "    \n",
+    "    # Calculate the dot product\n",
+    "    def dot(self, other):\n",
+    "        d = 0\n",
+    "        for i in range(self.size()):\n",
+    "            d += self[i] * other[i]\n",
+    "        return d\n",
+    "    \n",
+    "    # For testing the repr function only\n",
+    "    def __repr__(self):\n",
+    "        return(str(self.x))\n",
+    "\n",
+    "# For debugging purposes\n",
+    "u = MyVector([1, 1, 2])\n",
+    "v = MyVector([2, 1, 1])\n",
+    "\n",
+    "print(u.size())\n",
+    "print(u[0])\n",
+    "print(u.norm())\n",
+    "print(u)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -163,9 +208,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020\n"
+     ]
+    }
+   ],
    "source": [
     "import datetime\n",
     "year = datetime.date.today().year\n",
@@ -181,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -207,12 +260,75 @@
     "        self.crsid = crsid\n",
     "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    def age(self):\n",
+    "        import datetime\n",
+    "        year = datetime.date.today().year\n",
+    "        return year - self.birth_year\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        p = \"\"\n",
+    "        p += \"Surname: \" + self.surname\n",
+    "        p += \", Forename: \" + self.forename\n",
+    "        p += \", College: \" + self.college\n",
+    "        return p\n",
+    "    \n",
+    "    def __lt__(self,other):\n",
+    "        if (self.surname,self.forename) < (other.surname,other.forename):\n",
+    "            return True\n",
+    "        elif (self.surname,self.forename) > (other.surname,other.forename):\n",
+    "            return False\n",
+    "        else:\n",
+    "            return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "24\n",
+      "23\n",
+      "Surname: Reali, Forename: John, College: Corpus Christi\n",
+      "[Surname: Bacon, Forename: Kevin, College: Newnham, Surname: Bacon, Forename: Kevin, College: Newnham, Surname: Bloggs, Forename: Andrea, College: Churchill, Surname: Reali, Forename: John, College: Corpus Christi]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"My own testing\"\n",
+    "s0 = StudentEntry(\"Bloggs\", \"Andrea\", 1996, 1, \"Churchill\", \"ab1001\")       \n",
+    "s1 = StudentEntry(\"Reali\", \"John\", 1997, 1, \"Corpus Christi\")       \n",
+    "s2 = StudentEntry(\"Bacon\", \"Kevin\", 1996, 1, \"Newnham\")\n",
+    "s3 = StudentEntry(\"Bacon\", \"Kevin\", 1996, 1, \"Newnham\")\n",
+    "\"Changed - testing equal names, shouldn't be a problem\"\n",
+    "\n",
+    "\n",
+    "print( s0 < s1 )\n",
+    "print( s0 > s2 )\n",
+    "print( s3 < s2 )\n",
+    "print( s0.age() )\n",
+    "print( s1.age() )\n",
+    "print( str(s1)  )\n",
+    "\n",
+    "# Test sorting\n",
+    "s = [s0, s1, s2, s3]\n",
+    "s.sort()\n",
+    "for earlier, later in zip(s, s[1:]):\n",
+    "    assert earlier.surname <= later.surname\n",
+    "    if earlier.surname == later.surname:\n",
+    "        assert earlier.forename <= later.forename\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -267,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
