Update to course material
Added topic 13, and updated on the multiprocessing example in topic 5 which doesn't work (with both macos and windows).

--- a/05 Library functions.ipynb
+++ b/05 Library functions.ipynb
@@ -321,7 +321,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[20, 63, 96, 67, 24, 95, 56, 73, 48, 75]\n"
+      "[28, 17, 94, 14, 51, 61, 26, 15, 72, 12]\n"
      ]
     }
    ],
@@ -347,7 +347,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[20, 24, 48, 56, 63, 67, 73, 75, 95, 96]\n"
+      "[12, 14, 15, 17, 26, 28, 51, 61, 72, 94]\n"
      ]
     }
    ],
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 20000\n",
+    "N = 2000\n",
     "with multiprocessing.Pool(processes=3) as p:\n",
     "    p.map(mysort, [N, N, N])  # Call function mysort three times"
    ]
@@ -493,6 +493,19 @@
     "\n",
     "x = 1\n",
     "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Update\n",
+    "\n",
+    "According to Professor Wells' update in September, in the new course material: \n",
+    "\n",
+    "> *Remove multiprocessing example. Doesn't work with macos (and probably not with Windows either)*\n",
+    "\n",
+    "I've already failed in my macbook, and it doesn't work with my windows PC either, so I will ignore this example."
    ]
   },
   {
