--- a/Exercises/05 Exercises.ipynb
+++ b/Exercises/05 Exercises.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -290,7 +290,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KXFolwY4\n"
+      "MlacI0qX\n"
      ]
     }
    ],
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -500,8 +500,8 @@
      "output_type": "stream",
      "text": [
       "78500\n",
-      "59034\n",
-      "Compression efficiency:  0.7520254777070063\n"
+      "59036\n",
+      "Compression efficiency:  0.7520509554140128\n"
      ]
     }
    ],
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -566,8 +566,8 @@
      "output_type": "stream",
      "text": [
       "Repeated Text compression efficiency:  0.01178343949044586\n",
-      "Random Text compression efficiency:  0.7520254777070063\n",
-      "Efficiency difference: factor of  63.820540540540534\n"
+      "Random Text compression efficiency:  0.7520509554140128\n",
+      "Efficiency difference: factor of  63.8227027027027\n"
      ]
     }
    ],
